# ammar_467_repository

./: .~lock.eecs476.odt#  README.md  README.md~  eecs476.odt
ammar_action_server/: .~lock.P4_write_up_axn337.odt#  CMakeLists.txt  P4_write_up_axn337.odt  README.md  package.xml
ammar_action_server/action/: demo.action
ammar_action_server/launch/: ammar_action_server.launch
ammar_action_server/src/: ammar_action_client.cpp  ammar_action_server.cpp
ammar_ros_service/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml~  path_service.odt
ammar_ros_service/src/: my_path_client.cpp  my_path_client.cpp~  my_path_service.cpp  my_path_service.cpp~
assignment_6/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~  write_up.odt
assignment_6/src/: my_lidar_alarm.cpp  ps6_des_state_main .cpp  ps6_lidar_alarm.cpp  ps6_pub_des_state.cpp  ps6_pub_des_state.h  ps6_pub_des_state_main.cpp  ps6_pub_des_state_path_client.cpp  ps6_traj_builder.cpp  pub_des_state.cpp  traj_builder.cpp
map/: axn337_Assignment 5 Write Up.odt
my_lidar_alarm/: My_lidar_alarm.odt  README.md  my_lidar_alarm.ps  package.xml  package.xml~
my_lidar_alarm/src/: my_lidar_alarm.cpp  my_lidar_alarm.cpp~
my_minimal_nodes/: CMakeLists.txt  package.xml
my_minimal_nodes/bagfiles/: 2017-01-28-19-27-38.bag
my_minimal_nodes/launch/: my_minimal_nodes.launch  my_minimal_nodes.launch~
my_minimal_nodes/src/: minimal_publisher.cpp
my_minimal_nodes2/: CMakeLists.txt  CMakeLists.txt~  package.xml
my_stdr_control/: CMakeLists.txt  CMakeLists.txt~  Open_loop_stdr_control.odt  README.md  README.md~  open_loop_stdr_control.ps
my_stdr_control/src/: my_reactive_commander.cpp  my_stdr_open_loop_commander.cpp  my_stdr_open_loop_commander.cpp~
ps8_axn337/: CMakeLists.txt  README.md  README.md~  package.xml  package.xml~  ps8_axn337_writeup.odt  write_up.odt
ps8_axn337/include/ps8_traj_builder/: ps8_traj_builder.h
ps8_axn337/src/: ps8_lidar_alarm.cpp  ps8_lin_steering.cpp  ps8_pub_des_state.cpp  ps8_pub_des_state.h  ps8_pub_des_state_main.cpp  ps8_pub_des_state_path_client.cpp  ps8_traj_builder.cpp
